--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ header .fl:last-child {
 	background-color: white;
 }
 
-#actions {
+#footer {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	display: flex;
@@ -106,7 +106,7 @@ header .fl:last-child {
 	margin-top: 10px;
 }
 
-#actions button {
+#footer button {
 	width: 50px;
 	height: 50px;
 	margin-right: 30px;
@@ -122,13 +122,13 @@ header .fl:last-child {
 	box-shadow: 0 2px 3px 0 rgba(0,0,0,0.1);
 }
 
-#actions button img {
+#footer button img {
 	width: 100%;
 	height: auto;
 }
 
-#actions button:nth-of-type(2),
-#actions button:nth-of-type(3) {
+#footer button:nth-of-type(2),
+#footer button:nth-of-type(3) {
 	width: 60px;
 	height: 60px;
 	padding: 15px;
