--- a/src/pages/Chat/ChatScreen.css
+++ b/src/pages/Chat/ChatScreen.css
@@ -1,48 +1,49 @@
-.Chatscreen__Message {
+.chatScreen__message {
     display: flex;
     align-items: center;
     padding: 20px;
 }
 
-.ChatScreen__Message {
+.chatScreen__text {
     margin-left: 10px;
-    background-color: #d3d3d3;
+    background-color: lightgray;
     padding: 15px;
     border-radius: 20px;
 }
 
-.ChatScreen__MessageUser {
+.chatScreen__timestamp {
+    text-align: center;
+    padding: 20px;
+    color: gray;
+}
+
+.chatScreen__textUser{
     margin-left: auto;
     background-color: #29b3cd;
     padding: 15px;
     border-radius: 20px;
-    color: #ffffff;
+    color: white;
 }
 
-.Matched__timestamp {
-    text-align: center;
-    color: #808080;
-}
-
-.ChatScreen_Input {
+.chatScreen__input{
     display: flex;
     padding: 5px;
     position: fixed;
     bottom: 0;
     width: 100%;
-    border-top: 1px solid #d9d9d9;
+    border-top: 1px solid lightgray;
 }
 
-.ChatScreen__Input__Field {
+.chatScreen_inputField {
     flex: 1;
     padding: 10px;
     border: none;
 }
 
-.ChatScreen__Input__Button {
+.chatScreen_inputButton{
     border: none;
     margin-right: 20px;
-    background-color: #ffffff;
+    background-color: white;
     font-weight: bolder;
     color: #fe3d71;
 }
